-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0 Beta
-
None
-
Windows, MinGW
-
d2995cbb25d5ba672c614c47ee1f7581a8c91f13 (qt3d/5.5, 15.5.2015, 5.5) ad8bdecc68482eda079e8b49c3c5e8059ec45d69 (q
The Qt 3D examples use the library qt3d/examples/qt3d/exampleresources , which means they cannot be run standalone from Qt Creator and there have been compilation errors on MinGW due to it being too large.
This should be split up such that the examples can be run standalone.
- is required for
-
QTBUG-44654 Issues to be fixed before Qt 5.5 RC
-
- Closed
-
| For Gerrit Dashboard: QTBUG-45990 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 112248,3 | Remove exampleresources library from examples that do not use it. | 5.5 | qt/qt3d | Status: MERGED | +2 | 0 |
| 112520,2 | Examples: Remove shared resource library. | 5.5 | qt/qt3d | Status: MERGED | +2 | 0 |