Remove exampleresources library from examples that do not use it.

Enable the examples to run stand-alone (when launched from
Qt Creator's welcome screen).

Task-number: QTBUG-45990
Change-Id: Idc53d8342e75faf962410a91c3b2fe26a02610e5
Reviewed-by: Topi Reiniö <topi.reinio@digia.com>
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>