examples/qt3d/dynamicscene-cpp/dynamicscene-cpp.pro
@@ -2,8 +2,6 @@ TEMPLATE = app
 
 QT += 3dcore 3drenderer 3dinput
 
-include("../exampleresources/exampleresources.pri")
-
 SOURCES += \
     main.cpp \
     examplescene.cpp \
