examples/qt3d/tessellation-modes/tessellation-modes.pro
@@ -2,8 +2,6 @@ TEMPLATE = app
 
 QT += 3dcore 3drenderer 3dinput 3dquick qml quick
 
-include("../exampleresources/exampleresources.pri")
-
 HEADERS += \
     tessellatedquadmesh.h
 
